--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -181,8 +181,10 @@
 
 .rotateWrap {
   display: inline-block;
+  max-width: 100%;
   height: 1.15em;
   overflow: hidden;
+  overflow-x: clip;
   vertical-align: bottom;
   color: #7a7a7a;
 }
@@ -197,10 +199,13 @@
 
 .rotate span {
   height: 1.15em;
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   white-space: nowrap;
+  overflow-x: clip;
+  text-overflow: ellipsis;
 }
 
 .resourceGrid {
@@ -682,6 +687,8 @@
 .rotateStatic {
   display: inline-flex;
   align-items: center;
+  max-width: 100%;
+  overflow-x: clip;
   color: #7a7a7a;
 }
 
